[gd_scene load_steps=9 format=3 uid="uid://cqstfcsmv1o4b"]

[ext_resource type="Script" path="res://scripts/settingMenu.gd" id="1_onw17"]
[ext_resource type="AudioStream" uid="uid://ysdhxi847juk" path="res://songs/keyboard-click-327728.mp3" id="2_fthuw"]
[ext_resource type="FontFile" uid="uid://b50bj0igud88a" path="res://img/sprites/interfaz/Soulware2-Regular.otf" id="2_jd22b"]
[ext_resource type="AudioStream" uid="uid://ckmpm67au52b6" path="res://songs/menuPrincipal_OST_XD.mp3" id="2_xxgmq"]
[ext_resource type="Texture2D" uid="uid://cxbilfl0hnhb5" path="res://img/sprites/interfaz/bien/boton_long_unpress.png" id="3_ow151"]
[ext_resource type="Texture2D" uid="uid://wpse4ibkqdnu" path="res://img/sprites/interfaz/bien/boton_long_press.png" id="4_4ejpo"]
[ext_resource type="Texture2D" uid="uid://dgt2qpqo8uiyd" path="res://img/sprites/interfaz/fondo_settings.png" id="7_8wrl4"]

[sub_resource type="Environment" id="Environment_6i2nm"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onw17")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -910.0
offset_top = -70.0
offset_right = -610.0
offset_bottom = 292.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="soundEfectLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 32
text = " Sound Efects Volume"

[node name="soundEfectSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 10.0

[node name="muteEfect" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 24
text = "mute"

[node name="soundMusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 32
text = " Music Volume"

[node name="soundMusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 10.0

[node name="muteMusic" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 24
text = "mute"

[node name="brightnessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 32
text = "Brightness"

[node name="brightnessSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="fullScreenMode" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 24
text = "Full Screen Mode"

[node name="applyChanges" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ow151")
texture_pressed = ExtResource("4_4ejpo")
texture_hover = ExtResource("4_4ejpo")
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer/applyChanges"]
texture_filter = 1
layout_mode = 0
offset_left = 62.5
offset_top = 20.5
offset_right = 185.5
offset_bottom = 43.5
scale = Vector2(1.4606, 1.4418)
theme_override_fonts/font = ExtResource("2_jd22b")
theme_override_font_sizes/font_size = 32
text = "Aplicar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6i2nm")

[node name="AudioStreamPlayer2DMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xxgmq")
volume_db = 20.0
autoplay = true
bus = &"music"
parameters/looping = true

[node name="AudioStreamPlayer2DSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fthuw")
volume_db = 1.0
autoplay = true
bus = &"SFX"

[node name="FondoSettings" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(1290, 862)
scale = Vector2(1.68, 1.68)
texture = ExtResource("7_8wrl4")

[node name="FiltroBrillo" type="ColorRect" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="value_changed" from="VBoxContainer/soundEfectSlider" to="." method="_on_sound_efect_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/muteEfect" to="." method="_on_mute_efect_toggled"]
[connection signal="value_changed" from="VBoxContainer/soundMusicSlider" to="." method="_on_sound_music_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/muteMusic" to="." method="_on_mute_music_toggled"]
[connection signal="value_changed" from="VBoxContainer/brightnessSlider" to="." method="_on_brigthness_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/fullScreenMode" to="." method="_on_full_screen_mode_toggled"]
[connection signal="pressed" from="VBoxContainer/applyChanges" to="." method="_on_apply_changes_pressed"]
